Feature: Modify index.hbs to keep invalid url value in input

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <form method="POST" action="/" class="mt-5">
   <div class="input-group mb-3 input-group-lg">
     <span class="input-group-text" id="basic-addon3">URL</span>
-    <input type="text" class="form-control" id="url" name="url" placeholder="請輸入欲縮短的網址" aria-describedby="basic-addon3">
+    <input type="text" class="form-control" id="url" name="url" placeholder="請輸入欲縮短的網址" aria-describedby="basic-addon3" value="{{shortUrl}}">
   </div>
   <div class="d-grid col-md-3 mx-auto mt-5">
     <button class="btn btn-outline-primary btn-lg" type="submit">立即縮短</button>
