--- a/views/success.hbs
+++ b/views/success.hbs
@@ -5,7 +5,7 @@
 </div>
 </div>
 <div class="w-100 mt-4 mb-3 text-center">
-  <h3>成功縮短網址！按下copy去試試吧！</h3>
+  <h3>成功縮短網址！按下copy去試試吧！ <a href="/" class="text-decoration-none">縮短下一個網址</a></h3>
 </div>
 
 <script>
