add heroku route to success page

--- a/views/success.hbs
+++ b/views/success.hbs
@@ -1,5 +1,5 @@
 <div class="input-group input-group-lg mb-3 mt-5">
-  <input type="text" class="form-control" id="shortURL" value="localhost:3000/{{shortUrl}}"
+  <input type="text" class="form-control" id="shortURL" value="https://shorturlbypaul.herokuapp.com/{{shortUrl}}"
     aria-label="Example text with button addon" aria-describedby="button-addon1">
   <button class="btn btn-primary" type="button" onclick="copy()">copy</button>
 </div>
