modify img style

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -23,7 +23,7 @@
     <div class="mt-3">
       <img class="d-grid col-md-4 mx-auto"
         src="https://assets-lighthouse.alphacamp.co/uploads/image/file/16716/ExportedContentImage_00.png"
-        alt="shortUrl image">
+        alt="shortUrl image" style="max-width:100%; height: auto;">
     </div>
 
     {{{body}}}
